# CustomMultidimensionalArray

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  labwork_class.cpp  labwork_class.h
tests/: CMakeLists.txt  seventeen_bits_class_test.cpp
